# crop

./: BENCHMARKS.md  CHANGELOG.md  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
benches/: create.rs  creation.rs  editing.rs  graphemes.rs  insertion.rs  iterators.rs  metric_conversion.rs  serde.rs  slicing.rs
benches/common/: mod.rs
examples/: example_usage.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: byte_slicing.rs  editing.rs  slicing.rs
src/: lib.rs  rope.rs  tree.rs
src/rope/: chunk_slice.rs  gap_buffer.rs  gap_slice.rs  iterators.rs  metrics.rs  mod.rs  old_metrics.rs  rope.rs  rope_builder.rs  rope_chunk.rs  rope_slice.rs  text_chunk.rs  utils.rs
src/tree/: inode.rs  iterators.rs  leaves.rs  leaves_old.rs  metric.rs  mod.rs  node.rs  node_internal.rs  node_leaf.rs  tiny_arc.rs  traits.rs  tree.rs  tree_builder.rs  tree_slice.rs  units.rs  units_old.rs  utils.rs
src/tree/iterators/: leaves.rs  mod.rs  units.rs
tests/: byte_slice.rs  chunk_len.rs  graphemes.rs  iter_bytes.rs  iter_chars.rs  iter_graphemes.rs  iter_lines.rs  iterators.rs  line_slice.rs  line_slices.rs  rope.rs  rope_builder.rs  rope_edit.rs  rope_indexing.rs  rope_replace.rs  rope_slice.rs  serde.rs  slice_indexing.rs  slicing.rs  utf16_conversion.rs
tests/common/: mod.rs
