[package]
name = "crop"
version = "0.1.0"
edition = "2021"
authors = ["Riccardo Mazzarini <me@noib3.dev>"]
description = "A utf-8 text rope"
documentation = "https://docs.rs/crop"
repository = "https://github.com/noib3/crop"
readme = "README.md"
license = "MIT"
keywords = ["rope", "tree", "edit", "buffer"]
categories = ["data-structures", "text-editors", "text-processing"]
exclude = ["/.github/*", "/examples/**", "/fuzz/**", "/tests/**", "/BENCHMARKS.md"]

[package.metadata.docs.rs]
features = ["graphemes", "simd"]

[features]
default = ["simd"]

graphemes = ["unicode-segmentation"]
simd = ["str_indices/simd"]

# Private features
small_chunks = []
fanout_4 = []
fanout_24 = []
deep_trees = ["small_chunks", "fanout_4"]
dp = ["deep_trees"]

[dependencies]
str_indices = { version = "0.4.0", default-features = false }
unicode-segmentation = { version = "1.10.0", optional = true }

[dev-dependencies]
criterion = "0.4"
rand = "0.8"
ropey = "1.6"

[[bench]]
name = "creation"
harness = false

[[bench]]
name = "editing"
harness = false

[[bench]]
name = "graphemes"
harness = false
required-features = ["graphemes"]

[[bench]]
name = "iterators"
harness = false

[[bench]]
name = "slicing"
harness = false
