[package]
name = "crop"
version = "0.3.0"
edition = "2021"
rust-version = "1.65"
authors = ["Riccardo Mazzarini <me@noib3.dev>"]
description = "A pretty fast text rope"
documentation = "https://docs.rs/crop"
repository = "https://github.com/noib3/crop"
readme = "README.md"
license = "MIT"
keywords = ["rope", "tree", "edit", "buffer"]
categories = ["data-structures", "text-editors", "text-processing"]
exclude = ["/.github/*", "/examples/**", "/fuzz/**", "/tests/**", "/BENCHMARKS.md"]

[package.metadata.docs.rs]
features = ["graphemes", "simd"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["simd"]
graphemes = ["unicode-segmentation"]
simd = ["str_indices/simd"]
utf16-metric = []

# Private features
small_chunks = []
arity_4 = []
deep_trees = ["small_chunks", "arity_4"]
dp = ["deep_trees"]

[dependencies]
str_indices = { version = "0.4.0", default-features = false }
unicode-segmentation = { version = "1.10.0", optional = true }

[dev-dependencies]
criterion = "0.4"
rand = "0.8"
ropey = "1.6"

[[bench]]
name = "creation"
harness = false

[[bench]]
name = "editing"
harness = false

[[bench]]
name = "graphemes"
harness = false
required-features = ["graphemes"]

[[bench]]
name = "iterators"
harness = false

[[bench]]
name = "metric_conversion"
harness = false

[[bench]]
name = "slicing"
harness = false
