[package]
name = "crop"
version = "0.4.2"
edition = "2024"
rust-version = "1.85"
authors = ["Riccardo Mazzarini <me@noib3.dev>"]
description = "A pretty fast text rope"
documentation = "https://docs.rs/crop"
repository = "https://github.com/nomad/crop"
readme = "README.md"
license = "MIT"
keywords = ["rope", "tree", "edit", "buffer"]
categories = ["data-structures", "text-editors", "text-processing"]
exclude = [
  "/.github/*",
  "/examples/**",
  "/fuzz/**",
  "/tests/**",
  "/BENCHMARKS.md",
]

[package.metadata.docs.rs]
features = ["graphemes", "serde", "simd", "utf16-metric"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["simd", "std"]
graphemes = ["unicode-segmentation"]
serde = ["dep:serde"]
simd = ["str_indices/simd"]
utf16-metric = []
std = []

# Private features
small_chunks = []
arity_4 = []
deep_trees = ["small_chunks", "arity_4"]
dp = ["deep_trees"]

[dependencies]
str_indices = { version = "0.4.0", default-features = false }
serde = { version = "1", optional = true }
unicode-segmentation = { version = "1.10.0", optional = true }

[dev-dependencies]
criterion = "0.5"
rand = "0.9"
ropey = "1.6"
serde_json = "1"
serde_test = "1.0.177"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[[bench]]
name = "creation"
harness = false

[[bench]]
name = "editing"
harness = false

[[bench]]
name = "graphemes"
harness = false
required-features = ["graphemes"]

[[bench]]
name = "iterators"
harness = false

[[bench]]
name = "metric_conversion"
harness = false

[[bench]]
name = "serde"
harness = false
required-features = ["serde"]

[[bench]]
name = "slicing"
harness = false
